--- a/index.html
+++ b/index.html
@@ -935,25 +935,25 @@
             <h2 class="section-title">صور المنتج</h2>
             <div class="gallery-container">
                 <div class="gallery-item">
-                    <img src="/api/placeholder/400/300" alt="مصباح تكتيكي للدفاع عن النفس - أمامي">
+                    <img src="https://ae-pic-a1.aliexpress-media.com/kf/S45d8e8d52ffa49ecae59bcfa12bcc134k.jpg_220x220q75.jpg" alt="مصباح تكتيكي للدفاع عن النفس - أمامي">
                     <div class="gallery-caption">
                         <h3>المصباح التكتيكي - منظر أمامي</h3>
                     </div>
                 </div>
                 <div class="gallery-item">
-                    <img src="/api/placeholder/400/300" alt="مصباح تكتيكي للدفاع عن النفس - خلفي">
+                    <img src="https://ae-pic-a1.aliexpress-media.com/kf/Sdab1c3da33a64d95b06ee1308d8cee13u.jpg_220x220q75.jpg" alt="مصباح تكتيكي للدفاع عن النفس - خلفي">
                     <div class="gallery-caption">
                         <h3>المصباح التكتيكي - منظر خلفي</h3>
                     </div>
                 </div>
                 <div class="gallery-item">
-                    <img src="/api/placeholder/400/300" alt="أشواك قابلة للسحب">
+                    <img src="https://ae-pic-a1.aliexpress-media.com/kf/Scaf2f818e6b344fd8631df527768ec18C.jpg_220x220q75.jpg" alt="أشواك قابلة للسحب">
                     <div class="gallery-caption">
                         <h3>الأشواك القابلة للسحب للدفاع عن النفس</h3>
                     </div>
                 </div>
                 <div class="gallery-item">
-                    <img src="/api/placeholder/400/300" alt="مصباح تكتيكي للدفاع عن النفس - استخدام ليلي">
+                    <img src="https://ae-pic-a1.aliexpress-media.com/kf/HTB1BwobahUaBuNjt_iGq6xlkFXae.jpg_220x220q75.jpg" alt="مصباح تكتيكي للدفاع عن النفس - استخدام ليلي">
                     <div class="gallery-caption">
                         <h3>إضاءة قوية في الظلام</h3>
                     </div>
@@ -970,7 +970,7 @@
                 <div class="testimonial-item">
                     <p class="testimonial-text">اشتريت هذا المصباح للرحلات البرية وتجاوز توقعاتي. قوي جدًا وبطاريته تدوم لفترة طويلة. أشعر بأمان أكبر عند حمله خلال المشي ليلاً.</p>
                     <div class="testimonial-author">
-                        <img src="/api/placeholder/100/100" alt="صورة أحمد" class="testimonial-avatar">
+                        <img src="https://api.generated.photos/ai-face/v2?gender=male&ethnicity=middle_eastern&age=35&hair=short_curly&facial_hair=beard_light&clothing=thobe" alt="صورة أحمد" class="testimonial-avatar">
                         <div>
                             <h4>أحمد م.</h4>
                             <div class="testimonial-rating">
@@ -986,7 +986,7 @@
                 <div class="testimonial-item">
                     <p class="testimonial-text">جودة ممتازة! استخدمه عند المشي بالليل وفي رحلات التخييم. الإضاءة قوية جداً والتصميم متين. ميزة الأشواك للدفاع عن النفس تعطي شعوراً بالأمان الإضافي.</p>
                     <div class="testimonial-author">
-                        <img src="/api/placeholder/100/100" alt="صورة سارة" class="testimonial-avatar">
+                        <img src="https://thispersondoesnotexist.com/?gender=male&ethnicity=arabic" alt="صورة سارة" class="testimonial-avatar">
                         <div>
                             <h4>سارة ع.</h4>
                             <div class="testimonial-rating">
@@ -1002,7 +1002,7 @@
                 <div class="testimonial-item">
                     <p class="testimonial-text">اشتريت هذا المصباح لابني الذي يعمل في مناطق نائية، وهو سعيد جداً به. الشحن يدوم طويلاً، والإضاءة ممتازة في الظلام الدامس. المتانة والجودة تستحق السعر.</p>
                     <div class="testimonial-author">
-                        <img src="/api/placeholder/100/100" alt="صورة محمد" class="testimonial-avatar">
+                        <img src="https://api.generated.photos/ai-face/v2?age=adult&gender=male&ethnicity=middle_eastern" alt="صورة محمد" class="testimonial-avatar">
                         <div>
                             <h4>محمد ر.</h4>
                             <div class="testimonial-rating">
