--- a/index.html
+++ b/index.html
@@ -970,7 +970,7 @@
                 <div class="testimonial-item">
                     <p class="testimonial-text">اشتريت هذا المصباح للرحلات البرية وتجاوز توقعاتي. قوي جدًا وبطاريته تدوم لفترة طويلة. أشعر بأمان أكبر عند حمله خلال المشي ليلاً.</p>
                     <div class="testimonial-author">
-                        <img src="https://api.generated.photos/ai-face/v2?gender=male&ethnicity=middle_eastern&age=35&hair=short_curly&facial_hair=beard_light&clothing=thobe" alt="صورة أحمد" class="testimonial-avatar">
+                        <img src="https://thispersondoesnotexist.com/?gender=male&ethnicity=arabic" alt="صورة أحمد" class="testimonial-avatar">
                         <div>
                             <h4>أحمد م.</h4>
                             <div class="testimonial-rating">
