--- a/index.html
+++ b/index.html
@@ -970,7 +970,7 @@
                 <div class="testimonial-item">
                     <p class="testimonial-text">اشتريت هذا المصباح للرحلات البرية وتجاوز توقعاتي. قوي جدًا وبطاريته تدوم لفترة طويلة. أشعر بأمان أكبر عند حمله خلال المشي ليلاً.</p>
                     <div class="testimonial-author">
-                        <img src="https://thispersondoesnotexist.com/?gender=male&ethnicity=arabic" alt="صورة أحمد" class="testimonial-avatar">
+                        <img src="https://images.pexels.com/photos/1222271/pexels-photo-1222271.jpeg" alt="صورة أحمد" class="testimonial-avatar">
                         <div>
                             <h4>أحمد م.</h4>
                             <div class="testimonial-rating">
@@ -986,7 +986,7 @@
                 <div class="testimonial-item">
                     <p class="testimonial-text">جودة ممتازة! استخدمه عند المشي بالليل وفي رحلات التخييم. الإضاءة قوية جداً والتصميم متين. ميزة الأشواك للدفاع عن النفس تعطي شعوراً بالأمان الإضافي.</p>
                     <div class="testimonial-author">
-                        <img src="https://thispersondoesnotexist.com/?gender=male&ethnicity=arabic" alt="صورة سارة" class="testimonial-avatar">
+                        <img src="https://images.pexels.com/photos/3764119/pexels-photo-3764119.jpeg" alt="صورة سارة" class="testimonial-avatar">
                         <div>
                             <h4>سارة ع.</h4>
                             <div class="testimonial-rating">
@@ -1002,7 +1002,7 @@
                 <div class="testimonial-item">
                     <p class="testimonial-text">اشتريت هذا المصباح لابني الذي يعمل في مناطق نائية، وهو سعيد جداً به. الشحن يدوم طويلاً، والإضاءة ممتازة في الظلام الدامس. المتانة والجودة تستحق السعر.</p>
                     <div class="testimonial-author">
-                        <img src="https://api.generated.photos/ai-face/v2?age=adult&gender=male&ethnicity=middle_eastern" alt="صورة محمد" class="testimonial-avatar">
+                        <img src="https://generated.photos/v1/faces?ethnicity=middle_eastern&gender=male" alt="صورة محمد" class="testimonial-avatar">
                         <div>
                             <h4>محمد ر.</h4>
                             <div class="testimonial-rating">
